--- a/[Renzu]/renzu_shops/web/index.html
+++ b/[Renzu]/renzu_shops/web/index.html
@@ -10,7 +10,7 @@
   <main style="display: none;" id ="shop">
     <ro class="container">
     <section class="hero">
-      <img src="https://forum.cfx.re/uploads/default/original/4X/b/1/9/b196908c7e5dfcd60aa9dca0020119fa55e184cb.png" style="height: 60px;position: absolute;margin-top: -5px; width: unset !important;">
+      <img src="https://i.imgur.com/Rcm0fVJ.png" style="height: 60px;position: absolute;margin-top: -5px; width: unset !important;">
       <header>
         <h1 id="shopname">
           - Store 24/7
