--- a/[Renzu]/qb-inventory/html/ui.html
+++ b/[Renzu]/qb-inventory/html/ui.html
@@ -36,7 +36,7 @@
                     <div class="player-inventory" data-inventory="player"></div>
                 </div>
                 <div class="inv-options">
-                    <div style="position: relative;margin: auto;width: 80%;"><img src="https://forum.cfx.re/uploads/default/original/4X/b/1/9/b196908c7e5dfcd60aa9dca0020119fa55e184cb.png" style="height: 80px;"></div>
+                    <div style="position: relative;margin: auto;width: 80%;"><img src="https://i.imgur.com/Rcm0fVJ.png" style="height: 80px;"></div>
                     <div class="inv-options-list">
                         <input type="number" id="item-amount" class="inv-option-item" min=1 max="10000" placeholder="Amount" pattern="[0-9]" onfocus="this.value=''" placeholder="" oninput="validity.valid||(value='');"></input>
                         <div class="inv-option-item" id="item-use"><p>USE</p></div>
